--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="public/style.css">
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
 
 <body>
@@ -190,7 +192,7 @@
             </div>
             
         </div>
-        <button type="button" class="btn btn-primary text-right generate-pdf-btn" id="generatePdfBtn">Gerar PDF</button>
+        <button type="button" class="btn btn-primary text-right generate-pdf-btn" id="generatePdfBtn"><i class="fas fa-file-pdf mr-2"></i>Gerar PDF</button>
     </main>
     <footer class="bg-dark text-white text-center py-1">
         <p>&copy; <span id="currentYear"></span> Avaliação de TCC - Ciência da Computação</p>
