🐛 fix: update image path and script

--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js"></script>
     <!-- Custom JavaScript -->
     <script>   document.getElementById('currentYear').innerText = new Date().getFullYear(); </script>
-    <script src="../src/scripts/gerarLink.js"></script>
-    <script src="../src/scripts/calculaNotas.js"></script>
-    <script src="../src/scripts/geradorPdf.js"></script>
-    <script src="../src/scripts/assinatura.js"></script>
-    <script src="../src/scripts/cache.js"></script>
+    <script src="./src/scripts/gerarLink.js"></script>
+    <script src="./src/scripts/calculaNotas.js"></script>
+    <script src="./src/scripts/geradorPdf.js"></script>
+    <script src="./src/scripts/assinatura.js"></script>
+    <script src="./src/scripts/cache.js"></script>
 </body>
 
 </html>
