💄 feat: update the second observation

--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
                 <p><strong>Observação:</strong></p>
                 <label for="data">1 - Data Final para entregar a cópia definitiva do Trabalho de Graduação: <small class="text-danger ms-1 fw-bolder">*</small></label>
                 <input type="date" class="form-control" id="dataFim">
-                <small class="form-text text-muted hover:fs-1"><small class="text-danger ms-1 fw-bolder">*</small> Caso a versão definitiva do Relatório Escrito não seja entregue no prazo, o aluno será considerado REPROVADO na disciplina.</small>
-        
+                <p class="mt-2"><strong>2 - Caso a versão definitiva do Relatório Escrito não seja entregue no prazo, o aluno será considerado REPROVADO na disciplina.</strong></p>        
             </div>
             <!-- Container de assinatura -->
             <div class="container text-center mb-4">
