--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             </div>
             
         </div>
-        <button type="button" class="btn btn-primary text-right generate-pdf-btn" id="generatePdfBtn"><i class="fas fa-file-pdf mr-2"></i>Gerar PDF</button>
+        <button type="button" class="btn btn-primary text-right generate-pdf-btn" id="generatePdfBtn"><i id="iconPdf" class="fas fa-file-pdf mr-2"></i>Gerar PDF</button>
     </main>
     <footer class="bg-dark text-white text-center py-1">
         <p>&copy; <span id="currentYear"></span> Avaliação de TCC - Ciência da Computação</p>
