--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                     <!-- Outros campos de informações do aluno -->
                 </div>
-                <div class="text-right">
+                <div class="d-flex justify-content-center justify-content-md-end">
                     <button type="button" class="btn btn-dark " id="gerarLink">Gerar link de compartilhamento</button>
                 </div>
 
