🐛 fix: add signature validation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main class="mt-n4">
-        <div class="container">
+        <section class="container">
             <!-- Container de informações do aluno -->
             <div class="container mb-5">
                 <h2 class="text-danger text-center mb-4">Dados gerais</h2>
@@ -179,7 +179,7 @@
                 <p class="mt-2"><strong>2 - Caso a versão definitiva do Relatório Escrito não seja entregue no prazo, o aluno será considerado REPROVADO na disciplina.</strong></p>        
             </div>
             <!-- Container de assinatura -->
-            <div class="container text-center mb-4">
+            <div id="container-assinatura" class="container text-center mb-4">
                 <h4 class="display-6">Assinatura do(a) Avaliador(a)</h4>
                 <div class="canvas-container">
                     <canvas id="assinaturaCanvas"></canvas>
@@ -190,7 +190,7 @@
                 </div>
             </div>
             
-        </div>
+        </section>
         <button type="button" class="btn btn-primary text-right generate-pdf-btn" id="generatePdfBtn"><i id="iconPdf" class="fas fa-file-pdf mr-2"></i>Gerar PDF</button>
     </main>
     <footer class="bg-dark text-white text-center py-1">
