--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
             <div class="d-flex justify-content-center">
-                <a class="navbar-brand display-6" href="#">Avaliação de TCC - Ciência da Computação</a>
+                <a class="navbar-brand display-6" href="#">Avaliação de Trabalho de Graduação - Ciência da Computação</a>
             </div>
         </nav>
     </header>
