--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
             <div class="d-flex justify-content-center">
-                <a class="navbar-brand display-6" href="#">Avaliação de Trabalho de Graduação - Ciência da Computação</a>
+                <a class="navbar-brand display-6 text-center" href="#">Avaliação de Trabalho de Graduação - Ciência da Computação</a>
             </div>
         </nav>
     </header>
+    
     <main class="mt-n4">
         <section class="container">
             <!-- Container de informações do aluno -->
